@@ -36,6 +36,13 @@
 <div class="document">
 
 
+<p>2012-11-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/floats.c: Use compile-time selection of endian-specific
+code rather than run-time.  Fix cast warning with 64-bit builds.</li>
+</ul>
+</blockquote>
 <p>2012-11-07  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simplesystems&#46;org">glennrp<span>&#64;</span>simplesystems<span>&#46;</span>org</a>&gt;</p>
 <blockquote>
 <ul class="simple">
